# sudoku_rust

./: .gitignore  Cargo.toml  build.rs
src/: bitmap.rs  digit.rs  grid.rs  lib.rs  range.rs  solution.rs  variants.rs
